# deriv-dash

./: AGENTS.md  README.md  dashboard_plan.md  main.py  pyproject.toml
src/deriv_dash/: __init__.py  domain.py
src/deriv_dash/analytics/: __init__.py  returns.py  summary.py
src/deriv_dash/data/: __init__.py  normalization.py  providers.py  yfinance_provider.py
src/deriv_dash/services/: __init__.py  discovery.py  prices_service.py
src/deriv_dash/utils/: __init__.py  errors.py  logging.py  yf_patch.py
src/deriv_dash/viz/: __init__.py  price_charts.py
