[project]
name = "deriv-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.3.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.1",
    "yfinance>=0.2.66",
]
